test/corpus/expressions.txt
=====
Expression forms and precedence
=====

fact {
  let x = A + B | x in C
  { x: A | x in B }
  a.b[c, d]'
  ~rel + ^rel - *rel
  A <: r :> B
  A -> B
  A one -> lone B
  #A = 1
  a => b else c
  a ; b ; c
}

---

(source_file
  (fact_declaration
    (block
      (expression
        (let_expression
          (let_declaration
            (identifier)
            (expression
              (binary_expression
                (expression
                  (primary_expression
                    (qualified_name
                      (identifier))))
                (expression
                  (primary_expression
                    (qualified_name
                      (identifier)))))))
          (block_or_bar
            (expression
              (comparison_expression
                (expression
                  (primary_expression
                    (qualified_name
                      (identifier))))
                (comparison_operator)
                (expression
                  (primary_expression
                    (qualified_name
                      (identifier)))))))))
      (expression
        (set_comprehension
          (declaration
            (name_list
              (identifier))
            (expression
              (primary_expression
                (qualified_name
                  (identifier)))))
          (block_or_bar
            (expression
              (comparison_expression
                (expression
                  (primary_expression
                    (qualified_name
                      (identifier))))
                (comparison_operator)
                (expression
                  (primary_expression
                    (qualified_name
                      (identifier)))))))))
      (expression
        (binary_expression
          (expression
            (binary_expression
              (expression
                (implicit_conjunction_expression
                  (expression
                    (prime_expression
                      (expression
                        (box_expression
                          (expression
                            (binary_expression
                              (expression
                                (primary_expression
                                  (qualified_name
                                    (identifier))))
                              (expression
                                (primary_expression
                                  (qualified_name
                                    (identifier))))))
                          (expression
                            (primary_expression
                              (qualified_name
                                (identifier))))
                          (expression
                            (primary_expression
                              (qualified_name
                                (identifier))))))))
                  (unary_expression
                    (relational_unary_operator)
                    (expression
                      (primary_expression
                        (qualified_name
                          (identifier)))))))
              (expression
                (unary_expression
                  (relational_unary_operator)
                  (expression
                    (primary_expression
                      (qualified_name
                        (identifier))))))))
          (expression
            (unary_expression
              (relational_unary_operator)
              (expression
                (primary_expression
                  (qualified_name
                    (identifier))))))))
      (expression
        (binary_expression
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (qualified_name
                    (identifier))))
              (expression
                (primary_expression
                  (qualified_name
                    (identifier))))))
          (expression
            (primary_expression
              (qualified_name
                (identifier))))))
      (expression
        (arrow_expression
          (expression
            (primary_expression
              (qualified_name
                (identifier))))
          (arrow_operator)
          (expression
            (primary_expression
              (qualified_name
                (identifier))))))
      (expression
        (comparison_expression
          (expression
            (implicit_conjunction_expression
              (expression
                (arrow_expression
                  (expression
                    (primary_expression
                      (qualified_name
                        (identifier))))
                  (arrow_operator
                    (multiplicity)
                    (multiplicity))
                  (expression
                    (primary_expression
                      (qualified_name
                        (identifier))))))
              (unary_expression
                (expression
                  (primary_expression
                    (qualified_name
                      (identifier)))))))
          (comparison_operator)
          (expression
            (primary_expression
              (constant
                (number))))))
      (expression
        (implication_expression
          (expression
            (primary_expression
              (qualified_name
                (identifier))))
          (expression
            (primary_expression
              (qualified_name
                (identifier))))
          (expression
            (primary_expression
              (qualified_name
                (identifier))))))
      (expression
        (binary_expression
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (qualified_name
                    (identifier))))
              (expression
                (primary_expression
                  (qualified_name
                    (identifier))))))
          (expression
            (primary_expression
              (qualified_name
                (identifier)))))))))
